added basic register and update

--- a/register_page.html
+++ b/register_page.html
@@ -8,6 +8,29 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <navbar class="navbar margin-down">
+        <div class="subnav title">The Logo</div>
+        <div class="subnav">Middle Contents</div>
+        <div class="subnav buttons">
+            <button>Login</button>
+            <button>Register</button>
+        </div>
+    </navbar>
+
+    <div class="form-container">
+        <div class="formlabel"><h1>Register</h1></div>
+            <form class='register-form'>
+                <div>
+                    <label>Email</label>
+                    <input type="email" name="email" id="email">
+                </div>
+                <div>
+                    <label>Password</label>
+                    <input type="password" name="password" id="password">
+                </div>
+                <button class="button" type="submit">Submit</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
