--- a/login_page.html
+++ b/login_page.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="/css/page_layout.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -13,6 +15,23 @@
             <button>Login</button>
             <button>Register</button>
         </div>
-    </navbar>    
+    </navbar>
+
+    <div class="form-container">
+        <div class="formlabel"><h1>LOGIN</h1></div>
+        <div class="formlogin">
+            <form onSubmit={loginUser} class='formform'>
+                <div>
+                    <label>Email</label>
+                    <input type="email">
+                </div>
+                <div>
+                    <label>Password</label>
+                    <input type="password" class="password">
+                </div>
+                <button class="button" type="submit">Submit</button>
+            </form>
+        </div>        
+    </div>
 </body>
 </html>
