fixed redirection html added colors

--- a/login_page.html
+++ b/login_page.html
@@ -12,13 +12,14 @@
         <div class="subnav title">The Logo</div>
         <div class="subnav">Middle Contents</div>
         <div class="subnav buttons">
-            <button>Login</button>
-            <button>Register</button>
+            <button><a href="login_page.html">Login</a></button>
+            <button><a href="register_page.html">Register</a></button>
         </div>
     </navbar>
 
     <div class="form-container">
         <div class="formlabel"><h1>LOGIN</h1></div>
+        <br>
         <div class="formlogin">
             <form onSubmit={loginUser} class='formform'>
                 <div>
@@ -29,7 +30,7 @@
                     <label>Password</label>
                     <input type="password" class="password">
                 </div>
-                <button class="button" type="submit">Submit</button>
+                <button class="button" type="submit"><a href="main_page.html">Submit</a></button>
             </form>
         </div>        
     </div>
