--- a/post_page.html
+++ b/post_page.html
@@ -13,8 +13,8 @@
         <div class="subnav title">The Logo</div>
         <div class="subnav">Middle Contents</div>
         <div class="subnav buttons">
-            <button>Login</button>
-            <button>Register</button>
+            <button><a href="login_page.html">Login</a></button>
+            <button><a href="register_page.html">Register</a></button>
         </div>
     </navbar>
     
