--- a/register_page.html
+++ b/register_page.html
@@ -18,7 +18,8 @@
     </navbar>
 
     <div class="form-container">
-        <div class="formlabel"><h1>Register</h1></div>
+        <h1>Register</h1>
+        <br>
             <form class='register-form'>
                 <div>
                     <label>Email</label>
@@ -28,7 +29,7 @@
                     <label>Password</label>
                     <input type="password" name="password" id="password">
                 </div>
-                <button class="button" type="submit">Submit</button>
+                <button class="button" type="submit"><a href="main_page.html">Submit</a></button>
             </form>
         </div>
     </div>
