--- a/main_page.html
+++ b/main_page.html
@@ -12,45 +12,45 @@
         <div class="subnav title">The Logo</div>
         <div class="subnav">Middle Contents</div>
         <div class="subnav buttons">
-            <button>Login</button>
-            <button>Register</button>
+            <button><a href="login_page.html">Login</a></button>
+            <button><a href="register_page.html">Register</a></button>
         </div>
     </navbar>
     <div class="cards-container margin-down margin-left-right">
         <div class="cards">
             <div class="title-post"><strong>Title1</strong></div>
             <div class="description-post">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ut iste obcaecati ullam illum earum at maiores ducimus quia repellendus, sed vero? Consequatur dignissimos sit nemo explicabo fugiat repellendus adipisci!</div>
-            <button class="more">See more</button>
+            <button class="button" type="submit"><a href="post_page.html">See More</a></button>
         </div>
         <div class="cards">
             <div class="title-post"><strong>Title1</strong></div>
             <div class="description-post">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ut iste obcaecati ullam illum earum at maiores ducimus quia repellendus, sed vero? Consequatur dignissimos sit nemo explicabo fugiat repellendus adipisci!</div>
-            <button class="more">See more</button>
+            <button class="button" type="submit"><a href="post_page.html">See More</a></button>
         </div>
         <div class="cards">
             <div class="title-post"><strong>Title1</strong></div>
             <div class="description-post">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ut iste obcaecati ullam illum earum at maiores ducimus quia repellendus, sed vero? Consequatur dignissimos sit nemo explicabo fugiat repellendus adipisci!</div>
-            <button class="more">See more</button>
+            <button class="button" type="submit"><a href="post_page.html">See More</a></button>
         </div>
         <div class="cards">
             <div class="title-post"><strong>Title1</strong></div>
             <div class="description-post">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ut iste obcaecati ullam illum earum at maiores ducimus quia repellendus, sed vero? Consequatur dignissimos sit nemo explicabo fugiat repellendus adipisci!</div>
-            <button class="more">See more</button>
+            <button class="button" type="submit"><a href="post_page.html">See More</a></button>
         </div>
         <div class="cards">
             <div class="title-post"><strong>Title1</strong></div>
             <div class="description-post">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ut iste obcaecati ullam illum earum at maiores ducimus quia repellendus, sed vero? Consequatur dignissimos sit nemo explicabo fugiat repellendus adipisci!</div>
-            <button class="more">See more</button>
+            <button class="button" type="submit"><a href="post_page.html">See More</a></button>
         </div>
         <div class="cards">
             <div class="title-post"><strong>Title1</strong></div>
             <div class="description-post">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ut iste obcaecati ullam illum earum at maiores ducimus quia repellendus, sed vero? Consequatur dignissimos sit nemo explicabo fugiat repellendus adipisci!</div>
-            <button class="more">See more</button>
+            <button class="button" type="submit"><a href="post_page.html">See More</a></button>
         </div>
         <div class="cards">
             <div class="title-post"><strong>Title1</strong></div>
             <div class="description-post">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ut iste obcaecati ullam illum earum at maiores ducimus quia repellendus, sed vero? Consequatur dignissimos sit nemo explicabo fugiat repellendus adipisci!</div>
-            <button class="more">See more</button>
+            <button class="button" type="submit"><a href="post_page.html">See More</a></button>
         </div>
     </div>
 </body>
