--- a/phase1/login_page.html
+++ b/phase1/login_page.html
@@ -14,25 +14,23 @@
         <div class="subnav buttons">
             <button><a href="login_page.html">Login</a></button>
             <button><a href="register_page.html">Register</a></button>
+            <button><a href="user_profile_page.html">Profile</a></button>
         </div>
     </navbar>
 
-    <div class="form-container">
-        <div class="formlabel"><h1>LOGIN</h1></div>
-        <br>
-        <div class="formlogin">
-            <form class='formform'>
-                <div>
-                    <label>Email</label>
-                    <input type="email">
-                </div>
-                <div>
-                    <label>Password</label>
-                    <input type="password" class="password">
-                </div>
-                <button class="button" type="submit"><a href="main_page.html">Submit</a></button>
-            </form>
-        </div>        
+    <div class="login-form-container">
+        <h1 style="text-align: center;">Login</h1>
+        <form class='login-form'>
+            <div class="input-box">
+                <label>Email</label>
+                <input type="email">
+            </div>
+            <div class="input-box">
+                <label>Password</label>
+                <input type="password" class="password">
+            </div>
+            <button class="button" type="submit"><a href="main_page.html">Submit</a></button>
+        </form>      
     </div>
 </body>
 </html>
