--- a/phase1/main_page.html
+++ b/phase1/main_page.html
@@ -14,6 +14,7 @@
         <div class="subnav buttons">
             <button><a href="login_page.html">Login</a></button>
             <button><a href="register_page.html">Register</a></button>
+            <button><a href="user_profile_page.html">Profile</a></button>
         </div>
     </navbar>
     <div class="cards-container margin-down margin-left-right">
