--- a/phase1/register_page.html
+++ b/phase1/register_page.html
@@ -14,23 +14,22 @@
         <div class="subnav buttons">
             <button><a href="login_page.html">Login</a></button>
             <button><a href="register_page.html">Register</a></button>
+            <button><a href="user_profile_page.html">Profile</a></button>
         </div>
     </navbar>
-    <div class="form-container">
-        <h1>Register</h1>
-        <br>
-            <form class='register-form'>
-                <div>
-                    <label>Email</label>
-                    <input type="email" name="email" id="email">
-                </div>
-                <div>
-                    <label>Password</label>
-                    <input type="password" name="password" id="password">
-                </div>
-                <button class="button" type="submit"><a href="main_page.html">Submit</a></button>
-            </form>
-        </div>
+    <div class="register-form-container">
+        <h1 style="text-align: center;">Register</h1>
+        <form class='register-form'>
+            <div class="input-box">
+                <label>Email</label>
+                <input type="email">
+            </div>
+            <div class="input-box">
+                <label>Password</label>
+                <input type="password" class="password">
+            </div>
+            <button class="button" type="submit"><a href="main_page.html">Submit</a></button>
+        </form>      
     </div>
 </body>
 </html>
