added edit user page

--- a/phase1/user_profile_page.html
+++ b/phase1/user_profile_page.html
@@ -10,7 +10,7 @@
 <body>
     <navbar class="navbar navbar-img" style="height:200px; align-items: start;">
         <div class="subnav title">Wuthering Waves</div>
-        <div class="subnav middle">V.21</div>
+        <div class="subnav middle"><strong>V.21</strong></div>
         <div class="subnav buttons">
             <button><a href="login_page.html">Login</a></button>
             <button><a href="register_page.html">Register</a></button>
@@ -22,13 +22,13 @@
             <div class="profile-circle-holder"></div>
             <div class="profile-details-container">
                 <div class="profile-username">John Cena</div>
-                <div class="profile-edit"><button class="profile-edit">Edit</button></div>  
+                <div class="profile-edit"><button class="profile-edit"><a href="edit_user_profile_page.html">Edit</a></button></div>  
             </div>
 
         </div>
      
         <div class="description-container">
-            <div class="profile-description">sicing elit. Vitae ut iste obcaecati ullam illum earum at maiores ducimus quia repellendus, sed vero? Consequatur dignissimos sit nemo explicabo fugiat repellendus adipisci!</div>
+            <p class="profile-description">Hello All the people around the world, My name is Jim the Baptist, Thank you.</p>
         </div>
         
 
