polished main page, added png pictures for templating

--- a/phase1/main_page.html
+++ b/phase1/main_page.html
@@ -17,42 +17,55 @@
             <button><a href="user_profile_page.html">Profile</a></button>
         </div>
     </navbar>
-    <div class="cards-container margin-down margin-left-right">
+    <div class="cards-container" style="margin: 0px 300px 0px 300px;">
+        <div class="cards-top">
+            <button class="button" type="submit"><a href="create_post_page.html">Add Post</a></button>
+            <div class="description-post"><strong>POSTS</strong></div>
+            <div style="display:flex; gap:10px">
+                <div class="search-post"><input type="text"></div>
+                <div class="custom-select">
+                    <select>
+                        <option>Anime</option>
+                        <option>Manga</option>
+                        <option>Manwha</select>
+                    </select>
+                </div>
+            </div>
+        </div>
         <div class="cards">
-            <div class="title-post"><strong>Title1</strong></div>
+            <span class="title-post"><strong>Title1</strong></span><span class="user-post">Ameriea</span>
+            <div class="date-post"><strong>04/21</strong></div>
             <div class="description-post">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ut iste obcaecati ullam illum earum at maiores ducimus quia repellendus, sed vero? Consequatur dignissimos sit nemo explicabo fugiat repellendus adipisci!</div>
+            <div class="tags"><button style="margin-right:10px;">#Anime</button><button style="margin-right:10px;">#Manwha</button></div>
+            <div class="img-div-post"><img src="./css/genshin1.jpg" class="img-post"></div>
+            <br>
             <button class="button" type="submit"><a href="post_page.html">See More</a></button>
         </div>
         <div class="cards">
-            <div class="title-post"><strong>Title1</strong></div>
+            <span class="title-post"><strong>Title1</strong></span><span class="user-post">Ameriea</span>
             <div class="description-post">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ut iste obcaecati ullam illum earum at maiores ducimus quia repellendus, sed vero? Consequatur dignissimos sit nemo explicabo fugiat repellendus adipisci!</div>
+            <div class="tags"><button style="margin-right:10px;">#Anime</button><button style="margin-right:10px;">#Manwha</button></div>
+            <div class="img-div-post"><img src="./css/genshin2.jpg" class="img-post"></div>
+            <br>
             <button class="button" type="submit"><a href="post_page.html">See More</a></button>
         </div>
         <div class="cards">
-            <div class="title-post"><strong>Title1</strong></div>
+            <span class="title-post"><strong>Title1</strong></span><span class="user-post">Ameriea</span>
             <div class="description-post">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ut iste obcaecati ullam illum earum at maiores ducimus quia repellendus, sed vero? Consequatur dignissimos sit nemo explicabo fugiat repellendus adipisci!</div>
+            <div class="tags"><button style="margin-right:10px;">#Anime</button><button style="margin-right:10px;">#Manwha</button></div>
+            <div class="img-div-post"><img src="./css/genshin3.jpg" class="img-post"></div>
+            <br>
             <button class="button" type="submit"><a href="post_page.html">See More</a></button>
         </div>
         <div class="cards">
-            <div class="title-post"><strong>Title1</strong></div>
+            <span class="title-post"><strong>Title1</strong></span><span class="user-post">Ameriea</span>
             <div class="description-post">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ut iste obcaecati ullam illum earum at maiores ducimus quia repellendus, sed vero? Consequatur dignissimos sit nemo explicabo fugiat repellendus adipisci!</div>
-            <button class="button" type="submit"><a href="post_page.html">See More</a></button>
-        </div>
-        <div class="cards">
-            <div class="title-post"><strong>Title1</strong></div>
-            <div class="description-post">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ut iste obcaecati ullam illum earum at maiores ducimus quia repellendus, sed vero? Consequatur dignissimos sit nemo explicabo fugiat repellendus adipisci!</div>
-            <button class="button" type="submit"><a href="post_page.html">See More</a></button>
-        </div>
-        <div class="cards">
-            <div class="title-post"><strong>Title1</strong></div>
-            <div class="description-post">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ut iste obcaecati ullam illum earum at maiores ducimus quia repellendus, sed vero? Consequatur dignissimos sit nemo explicabo fugiat repellendus adipisci!</div>
-            <button class="button" type="submit"><a href="post_page.html">See More</a></button>
-        </div>
-        <div class="cards">
-            <div class="title-post"><strong>Title1</strong></div>
-            <div class="description-post">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ut iste obcaecati ullam illum earum at maiores ducimus quia repellendus, sed vero? Consequatur dignissimos sit nemo explicabo fugiat repellendus adipisci!</div>
+            <div class="tags"><button style="margin-right:10px;">#Anime</button><button style="margin-right:10px;">#Manwha</button></div>
+            <div class="img-div-post"><img src="./css/genshin1.jpg" class="img-post"></div>
+            <br>
             <button class="button" type="submit"><a href="post_page.html">See More</a></button>
         </div>
     </div>
+
 </body>
 </html>
