--- a/phase1/user_profile_page.html
+++ b/phase1/user_profile_page.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <navbar class="navbar navbar-img" style="height:200px; align-items: start;">
+    <navbar class="blur navbar navbar-img" style="height:200px; align-items: start;">
         <div class="subnav title">Wuthering Waves</div>
         <div class="subnav middle"><strong>V.21</strong></div>
         <div class="subnav buttons">
@@ -17,7 +17,7 @@
             <button><a href="user_profile_page.html">Profile</a></button>
         </div>
     </navbar>
-    <div class="profile-bar">
+    <div class="blur profile-bar">
         <div>
             <div class="profile-circle-holder"></div>
             <div class="profile-details-container">
@@ -34,7 +34,7 @@
 
     </div>
     <div class="profile-container2">
-        <div class="profile-post-container">
+        <div class="blur-left profile-post-container">
             <div class="profile-post-header">
                 <div class="title-post"><strong>POSTS</strong></div>
             </div>            
@@ -69,7 +69,7 @@
                 <button class="more">Delete</button>
             </div>        
         </div>
-        <div class="comments-container">
+        <div class="blur-right comments-container">
             <div class="comment-container" style="padding:10px;">
                 <div class="profile-comment-header"><strong>Comments</strong></div>
             </div>
