fixed a href and button bug click

--- a/phase1/edit_user_profile_page.html
+++ b/phase1/edit_user_profile_page.html
@@ -12,12 +12,11 @@
         <div class="subnav title">The Logo</div>
         <div class="subnav">Middle Contents</div>
         <div class="subnav buttons">
-            <button><a href="login_page.html">Login</a></button>
-            <button><a href="register_page.html">Register</a></button>
-            <button><a href="user_profile_page.html">Profile</a></button>
+            <input type="button" onclick="location.href='login_page.html'" value="Login">
+            <input type="button" onclick="location.href='register_page.html'" value="Register">
+            <input type="button" onclick="location.href='user_profile_page.html'" value="Profile">
         </div>
     </navbar>
-
     <div class="Update-form-container">
         <h1 style="text-align: center;">Update Profile</h1>
         <form class='Update-form'>
@@ -37,7 +36,7 @@
                 <label>Description</label>
                 <input type="password" class="form-profile-description">
             </div>
-            <button class="button" type="submit"><a href="main_page.html">Submit</a></button>
+            <input type="button" onclick="location.href='main_page.html'" value="Submit">
         </form>      
     </div>
 </body>
