--- a/phase1/main_page.html
+++ b/phase1/main_page.html
@@ -12,14 +12,14 @@
         <div class="subnav title">The Logo</div>
         <div class="subnav">Middle Contents</div>
         <div class="subnav buttons">
-            <button><a href="login_page.html">Login</a></button>
-            <button><a href="register_page.html">Register</a></button>
-            <button><a href="user_profile_page.html">Profile</a></button>
+            <input type="button" onclick="location.href='login_page.html'" value="Login">
+            <input type="button" onclick="location.href='register_page.html'" value="Register">
+            <input type="button" onclick="location.href='user_profile_page.html'" value="Profile">
         </div>
     </navbar>
     <div class="cards-container" style="margin: 0px 300px 0px 300px;">
         <div class="cards-top">
-            <button class="button" type="submit"><a href="create_post_page.html">Add Post</a></button>
+            <input type="button" onclick="location.href='create_post_page.html'" value="Add Post">
             <div class="description-post"><strong>POSTS</strong></div>
             <div style="display:flex; gap:10px">
                 <div class="search-post"><input type="text"></div>
@@ -39,7 +39,7 @@
             <div class="tags"><button style="margin-right:10px;">#Anime</button><button style="margin-right:10px;">#Manwha</button></div>
             <div class="img-div-post"><img src="./css/genshin1.jpg" class="img-post"></div>
             <br>
-            <button class="button" type="submit"><a href="post_page.html">See More</a></button>
+            <input type="button" onclick="location.href='post_page_html'" value="See More">
         </div>
         <div class="cards">
             <span class="title-post"><strong>Title1</strong></span><span class="user-post">Ameriea</span>
@@ -47,7 +47,7 @@
             <div class="tags"><button style="margin-right:10px;">#Anime</button><button style="margin-right:10px;">#Manwha</button></div>
             <div class="img-div-post"><img src="./css/genshin2.jpg" class="img-post"></div>
             <br>
-            <button class="button" type="submit"><a href="post_page.html">See More</a></button>
+            <input type="button" onclick="location.href='post_page_html'" value="See More">
         </div>
         <div class="cards">
             <span class="title-post"><strong>Title1</strong></span><span class="user-post">Ameriea</span>
@@ -55,7 +55,7 @@
             <div class="tags"><button style="margin-right:10px;">#Anime</button><button style="margin-right:10px;">#Manwha</button></div>
             <div class="img-div-post"><img src="./css/genshin3.jpg" class="img-post"></div>
             <br>
-            <button class="button" type="submit"><a href="post_page.html">See More</a></button>
+            <input type="button" onclick="location.href='post_page_html'" value="See More">
         </div>
         <div class="cards">
             <span class="title-post"><strong>Title1</strong></span><span class="user-post">Ameriea</span>
@@ -63,7 +63,7 @@
             <div class="tags"><button style="margin-right:10px;">#Anime</button><button style="margin-right:10px;">#Manwha</button></div>
             <div class="img-div-post"><img src="./css/genshin1.jpg" class="img-post"></div>
             <br>
-            <button class="button" type="submit"><a href="post_page.html">See More</a></button>
+            <input type="button" onclick="location.href='post_page_html'" value="See More">
         </div>
     </div>
 
