--- a/phase1/post_page.html
+++ b/phase1/post_page.html
@@ -13,9 +13,9 @@
         <div class="subnav title">The Logo</div>
         <div class="subnav">Middle Contents</div>
         <div class="subnav buttons">
-            <button><a href="login_page.html">Login</a></button>
-            <button><a href="register_page.html">Register</a></button>
-            <button><a href="user_profile_page.html">Profile</a></button>
+            <input type="button" onclick="location.href='login_page.html'" value="Login">
+            <input type="button" onclick="location.href='register_page.html'" value="Register">
+            <input type="button" onclick="location.href='user_profile_page.html'" value="Profile">
         </div>
     </navbar>
     
