--- a/phase1/register_page.html
+++ b/phase1/register_page.html
@@ -12,9 +12,9 @@
         <div class="subnav title">The Logo</div>
         <div class="subnav">Middle Contents</div>
         <div class="subnav buttons">
-            <button><a href="login_page.html">Login</a></button>
-            <button><a href="register_page.html">Register</a></button>
-            <button><a href="user_profile_page.html">Profile</a></button>
+            <input type="button" onclick="location.href='login_page.html'" value="Login">
+            <input type="button" onclick="location.href='register_page.html'" value="Register">
+            <input type="button" onclick="location.href='user_profile_page.html'" value="Profile">
         </div>
     </navbar>
     <div class="register-form-container">
@@ -28,7 +28,7 @@
                 <label>Password</label>
                 <input type="password" class="password">
             </div>
-            <button class="button" type="submit"><a href="main_page.html">Submit</a></button>
+            <input type="button" onclick="location.href='main_page.html'" value="Submit">
         </form>      
     </div>
 </body>
