--- a/phase1/user_profile_page.html
+++ b/phase1/user_profile_page.html
@@ -12,9 +12,9 @@
         <div class="subnav title">Wuthering Waves</div>
         <div class="subnav middle"><strong>V.21</strong></div>
         <div class="subnav buttons">
-            <button><a href="login_page.html">Login</a></button>
-            <button><a href="register_page.html">Register</a></button>
-            <button><a href="user_profile_page.html">Profile</a></button>
+            <input type="button" onclick="location.href='login_page.html'" value="Login">
+            <input type="button" onclick="location.href='register_page.html'" value="Register">
+            <input type="button" onclick="location.href='user_profile_page.html'" value="Profile">
         </div>
     </navbar>
     <div class="blur profile-bar">
@@ -22,7 +22,8 @@
             <div class="profile-circle-holder"></div>
             <div class="profile-details-container">
                 <div class="profile-username">John Cena</div>
-                <div class="profile-edit"><button class="profile-edit"><a href="edit_user_profile_page.html">Edit</a></button></div>  
+                <input type="button" class="profile-edit" onclick="location.href='edit_user_profile_page.html'" value="Edit">
+                
             </div>
 
         </div>
