added basic animations on different html files

--- a/phase1/login_page.html
+++ b/phase1/login_page.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <navbar class="navbar margin-down">
+    <navbar class="blur navbar margin-down">
         <div class="subnav title">The Logo</div>
         <div class="subnav">Middle Contents</div>
         <div class="subnav buttons">
@@ -18,7 +18,7 @@
         </div>
     </navbar>
 
-    <div class="login-form-container">
+    <div class="blur-bottom login-form-container">
         <h1 style="text-align: center;">Login</h1>
         <form class='login-form'>
             <div class="input-box">
