--- a/phase1/register_page.html
+++ b/phase1/register_page.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <navbar class="navbar margin-down">
+    <navbar class="blur navbar margin-down">
         <div class="subnav title">The Logo</div>
         <div class="subnav">Middle Contents</div>
         <div class="subnav buttons">
@@ -17,7 +17,7 @@
             <input type="button" onclick="location.href='user_profile_page.html'" value="Profile">
         </div>
     </navbar>
-    <div class="register-form-container">
+    <div class="blur-bottom register-form-container">
         <h1 style="text-align: center;">Register</h1>
         <form class='register-form'>
             <div class="input-box">
