--- a/phase1/user_profile_page.html
+++ b/phase1/user_profile_page.html
@@ -76,7 +76,7 @@
             </div>
 
             <div class="comment-container">
-                <div class="comments">Name:X Reet consectetur adipisicing elit. Vitae ut iste obcaecati ullam illum earum at maioret consectetur adipisicing elit. Vitae ut iste obcaecati ullam illum earum at maiorply: linglingling</div>
+                <div class="comments">Name:X Reet consectetur adipisicing elit. Vitae ut iste obcaecati ullam illum earum at r adipisicing elit. Vitae ut iste obcaecati ullam illum earum at r adipisicing elit. Vitae ut iste obcaecati ullam illum earum at maioret consectetur adipisicing elit. Vitae ut iste obcaecati ullam illum earum at maiorply: linglingling</div>
                 <a href="post_page">Link to Post</a href>
             </div>
             <div class="comment-container">
