--- a/phase1/login_page.html
+++ b/phase1/login_page.html
@@ -3,34 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./css/page_layout.css">
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="page_layout.css">
+    <link rel="stylesheet" type="text/css" href="login_style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Login</title>
 </head>
 <body>
+    <div class = "circles">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+    
     <navbar class="blur navbar margin-down">
-        <div class="subnav title">The Logo</div>
-        <div class="subnav">Middle Contents</div>
+        <div class="subnav title">Space-X</div></br>
+        <img src = "https://cdn1.iconfinder.com/data/icons/science-36/24/science_space_planet_ring_saturn-512.png"/>
+         <!--<div class="subnav">The Logo</div>
         <div class="subnav buttons">
             <input type="button" onclick="location.href='login_page.html'" value="Login">
             <input type="button" onclick="location.href='register_page.html'" value="Register">
-            <input type="button" onclick="location.href='user_profile_page.html'" value="Profile">
-        </div>
+        </div>-->
     </navbar>
 
-    <div class="blur-bottom login-form-container">
-        <h1 style="text-align: center;">Login</h1>
-        <form class='login-form'>
-            <div class="input-box">
-                <label>Email</label>
-                <input type="email">
-            </div>
-            <div class="input-box">
-                <label>Password</label>
-                <input type="password" class="password">
-            </div>
-            <input type="button" onclick="location.href='main_page.html'" value="Submit">
-        </form>      
-    </div>
+    <main>
+        <div class="blur-bottom login-form-container">
+            <h1 style="text-align: center;">Login</h1>
+            <form class='login-form'>
+                <div class="input-box">
+                    <img src = "https://static.vecteezy.com/system/resources/previews/000/646/268/original/email-symbol-icon-vector.jpg"/>
+
+                    <input type="email" placeholder="Email" class = "answer_box">
+                </div>
+                <div class="input-box">
+                    <img src = "https://icon-library.com/images/password-icon-png/password-icon-png-4.jpg"/>
+                    <input type="password"  placeholder="Password"  class = "answer_box">
+                </div>
+                    <input type="button" onclick="location.href='main_page.html'" value="LOGIN" class = "login_but">
+            </form>      
+        </div>
+
+        <div class="register-prompt">
+            Don't have an account yet? Click <a href="register_page.html">here</a> to register.
+        </div>
+    </main>
+
+    <footer class="sticky-footer">
+        <div class="footer-content">
+            &copy; 2024 Your Company. All rights reserved.
+        </div>
+    </footer>
 </body>
 </html>
