Added delete button, replaced login/register with logout.

--- a/phase1/main_page.html
+++ b/phase1/main_page.html
@@ -14,7 +14,7 @@
         <div class="subnav">Middle Contents</div>
         <div class="subnav buttons">
             <input type="button" onclick="location.href='user_profile_page.html'" value="Profile">
-            <input type="button" onclick="location.href='logout.html'" value="Logout">
+            <input type="button" onclick="location.href='register_page.html'" value="Logout">
         </div>
     </navbar>
     <div class="blur-left cards-container" style="margin: 0px 300px 0px 300px;">
