--- a/phase1/main_page.html
+++ b/phase1/main_page.html
@@ -29,6 +29,10 @@
                         <option>Manga</option>
                         <option>Manwha</option>
                     </select>
+                    <select>
+                        <option>Hottest</option>
+                        <option>Newest</option>
+                    </select>
                 </div>
             </div>
         </div>
