--- a/phase1/user_profile_page.html
+++ b/phase1/user_profile_page.html
@@ -9,9 +9,8 @@
     <title>Document</title>
 </head>
 <body>
-    <navbar class="blur navbar navbar-img" style="height:200px; align-items: start;">
-        <div class="subnav title">Wuthering Waves</div>
-        <div class="subnav middle"><strong>V.21</strong></div>
+    <navbar class="blur navbar navbar-img" style="height:200px;">
+        <div class="subnav title"><div class=TITLEE onclick="location.href ='main_page.html'">Wuthering Waves</div></div>
         <div class="subnav buttons">
             <input type="button" onclick="location.href='login_page.html'" value="Login">
             <input type="button" onclick="location.href='register_page.html'" value="Register">
@@ -45,31 +44,31 @@
             <div class="cards">
                 <div class="title-post"><strong>Title1</strong></div>
                 <div class="description-post">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ut iste obcaecati ullam illum earum at maiores ducimus quia repellendus, sed vero? Consequatur dignissimos sit nemo explicabo fugiat repellendus adipisci!</div>
-                <button class="more">Update</button>
+                <input type="button" onclick="location.href='update_post_page.html'" value="Update">
                 <button class="more">Delete</button>
             </div>
             <div class="cards">
                 <div class="title-post"><strong>Title1</strong></div>
                 <div class="description-post">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ut iste obcaecati ullam illum earum at maiores ducimus quia repellendus, sed vero? Consequatur dignissimos sit nemo explicabo fugiat repellendus adipisci!</div>
-                <button class="more">Update</button>
+                <input type="button" onclick="location.href='update_post_page.html'" value="Update">
                 <button class="more">Delete</button>
             </div>
             <div class="cards">
                 <div class="title-post"><strong>Title1</strong></div>
                 <div class="description-post">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ut iste obcaecati ullam illum earum at maiores ducimus quia repellendus, sed vero? Consequatur dignissimos sit nemo explicabo fugiat repellendus adipisci!</div>
-                <button class="more">Update</button>
+                <input type="button" onclick="location.href='update_post_page.html'" value="Update">
                 <button class="more">Delete</button>
             </div>
             <div class="cards">
                 <div class="title-post"><strong>Title1</strong></div>
                 <div class="description-post">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ut iste obcaecati ullam illum earum at maiores ducimus quia repellendus, sed vero? Consequatur dignissimos sit nemo explicabo fugiat repellendus adipisci!</div>
-                <button class="more">Update</button>
+                <input type="button" onclick="location.href='update_post_page.html'" value="Update">
                 <button class="more">Delete</button>
             </div>
             <div class="cards">
                 <div class="title-post"><strong>Title1</strong></div>
                 <div class="description-post">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ut iste obcaecati ullam illum earum at maiores ducimus quia repellendus, sed vero? Consequatur dignissimos sit nemo explicabo fugiat repellendus adipisci!</div>
-                <button class="more">Update</button>
+                <input type="button" onclick="location.href='update_post_page.html'" value="Update">
                 <button class="more">Delete</button>
             </div>        
         </div>
