Finalized post_page.html
Added edit and delete buttons on comments, moved css of post_page.html from phase1/css/style.css to phase1/style.css

--- a/phase1/user_profile_page.html
+++ b/phase1/user_profile_page.html
@@ -79,7 +79,7 @@
 
             <div class="comment-container">
                 <div class="comments">Name:X Reet consectetur adipisicing elit. Vitae ut iste obcaecati ullam illum earum at r adipisicing elit. Vitae ut iste obcaecati ullam illum earum at r adipisicing elit. Vitae ut iste obcaecati ullam illum earum at maioret consectetur adipisicing elit. Vitae ut iste obcaecati ullam illum earum at maiorply: linglingling</div>
-                <a href="post_page">Link to Post</a href>
+                <a href="post_page.html">Link to Post</a href>
             </div>
             <div class="comment-container">
                 <div class="comments">Name:X Reply: linglingling</div>
