--- a/phase1/post_page.html
+++ b/phase1/post_page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./css/page_layout.css">
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title id="postPageTitle">Post</title>
@@ -46,7 +46,7 @@
         <div class="comments-container">
             <h2>Comments</h2>
             <div class="createComment">
-                <div id="draftComment" contenteditable="true" placeholder="Write your comment here :3" oninput="if(this.innerHTML.trim()==='<br>')this.innerHTML=''"></div>
+                <div id="draftComment" contenteditable="true" placeholder="Enter your comment here" oninput="if(this.innerHTML.trim()==='<br>')this.innerHTML=''"></div>
                 <div class="buttonsContainer">
                     <button id="attachFilesComment">Attach Files</button>
                     <button id="postComment">Post</button>
@@ -58,19 +58,26 @@
                 </div>
                 <div class="commentTextContainer">
                     <h4>Name: x</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius temporibus molestiae consequuntur ea asperiores, praesentium cupiditate illo nihil atque, deleniti doloremque eligendi maiores sunt commodi eaque accusamus dignissimos. Sint, numquam?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam et aperiam perferendis, omnis voluptas id dolorum ab asperiores totam. Sapiente corrupti rerum consequuntur neque, molestias vero magni ea provident!</p>
+                    <div class="buttonsContainer editCommentButtons">
+                        <button id="attachFilesComment">Attach Files</button>
+                        <button id="postComment" onclick="editCommentDiv(this)">Edit Comment</button>
+                    </div>
+
                     <div class="commentActionsContainer">
                         <i class="fa-solid fa-thumbs-up"></i>
                         <span> 123</span>
                         <i class="fa-solid fa-thumbs-down"></i>
                         <span> 123</span>
                         <button class="replyButton" onclick="toggleReplyComment(this)">Reply</button>
+                        <button onclick="editCommentDiv(this)">Edit</button>
+                        <button class="deleteCommentButton">Delete</button>
 
                         <div class="createComment replyComment">
-                            <div class="draftReplyComment" contenteditable="true" placeholder="Write your comment here :3" oninput="if(this.innerHTML.trim()==='<br>')this.innerHTML=''"></div>
+                            <div class="draftReplyComment" contenteditable="true" placeholder="Enter your reply here" oninput="if(this.innerHTML.trim()==='<br>')this.innerHTML=''"></div>
                             <div class="buttonsContainer">
                                 <button id="attachFilesComment">Attach Files</button>
-                                <button id="postComment">Post</button>
+                                <button id="postComment">Reply</button>
                             </div>
                         </div>
 
@@ -89,7 +96,7 @@
                                     <button class="replyButton" onclick="toggleReplyComment(this)">Reply</button>
             
                                     <div class="createComment replyComment">
-                                        <div class="draftReplyComment" contenteditable="true" placeholder="Write your comment here :3" oninput="if(this.innerHTML.trim()==='<br>')this.innerHTML=''"></div>
+                                        <div class="draftReplyComment" contenteditable="true" placeholder="Enter your reply here" oninput="if(this.innerHTML.trim()==='<br>')this.innerHTML=''"></div>
                                         <div class="buttonsContainer">
                                             <button id="attachFilesComment">Attach Files</button>
                                             <button id="postComment">Post</button>
@@ -116,7 +123,7 @@
                         <button class="replyButton" onclick="toggleReplyComment(this)">Reply</button>
 
                         <div class="createComment replyComment">
-                            <div class="draftReplyComment" contenteditable="true" placeholder="Write your comment here :3" oninput="if(this.innerHTML.trim()==='<br>')this.innerHTML=''"></div>
+                            <div class="draftReplyComment" contenteditable="true" placeholder="Enter your reply here" oninput="if(this.innerHTML.trim()==='<br>')this.innerHTML=''"></div>
                             <div class="buttonsContainer">
                                 <button id="attachFilesComment">Attach Files</button>
                                 <button id="postComment">Post</button>
@@ -128,18 +135,6 @@
         </div>
     </div>
 
-    <script type="text/javascript">
-        textarea = document.querySelector("#draftComment");
-        textarea.addEventListener('input', autoResize, false);
- 
-        function autoResize() {
-            this.style.height = 'auto';
-            this.style.height = Math.max(this.scrollHeight, this.offsetHeight) + 'px';
-        }
-
-        function toggleReplyComment(button) {
-            button.parentElement.getElementsByTagName("div")[0].style.display = (button.parentElement.getElementsByTagName("div")[0].style.display === 'block') ? 'none' : 'block';
-        }
-    </script>
+    <script src="modal.js"></script>
 </body>
 </html>
