Added texts, images, andd post pages

--- a/phase1/main_page.html
+++ b/phase1/main_page.html
@@ -16,6 +16,9 @@
             <input type="button" onclick="location.href='register_page.html'" value="Logout">
         </div>
     </navbar>
+
+
+
     <div class="blur-left cards-container" style="margin: 0px 300px 0px 300px;">
         <div class="cards-top">
             <input type="button" onclick="location.href='create_post_page.html'" value="Add Post">
@@ -31,6 +34,9 @@
                 </div>
             </div>
         </div>
+
+
+
         <div class="cards">
             <div style="display: flex; justify-content: space-between;">
                 <span class="title-post"><strong>Title1</strong></span>
@@ -42,8 +48,11 @@
             <div class="tags"><button style="margin-right:10px;">#Anime</button><button style="margin-right:10px;">#Manwha</button></div>
             <div class="img-div-post"><img src="./css/genshin1.jpg" class="img-post"></div>
             <br>
-            <input type="button" onclick="location.href='post_page.html'" value="See More">
+            <input type="button" onclick="location.href='post_page_1.html'" value="See More">
         </div>
+
+
+
         <div class="cards">
             <div style="display: flex; justify-content: space-between;">
                 <span class="title-post"><strong>Title1</strong></span>
@@ -54,31 +63,54 @@
             <div class="tags"><button style="margin-right:10px;">#Anime</button><button style="margin-right:10px;">#Manwha</button></div>
             <div class="img-div-post"><img src="./css/genshin2.jpg" class="img-post"></div>
             <br>
-            <input type="button" onclick="location.href='post_page.html'" value="See More">
+            <input type="button" onclick="location.href='post_page_2.html'" value="See More">
         </div>
+
+
+
         <div class="cards">
             <div style="display: flex; justify-content: space-between;">
-                <span class="title-post"><strong>Title1</strong></span>
+                <span class="title-post"><strong>7.3 Honkai Impact Update!</strong></span>
                 <input type="button" value="Delete">
             </div>
-            <span class="user-post">Ameriea</span>
-            <div class="description-post">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ut iste obcaecati ullam illum earum at maiores ducimus quia repellendus, sed vero? Consequatur dignissimos sit nemo explicabo fugiat repellendus adipisci!</div>
+            <span class="user-post">AbominationOfYaoshi</span>
+            <div class="description-post">"Hey there, world!" This girl, born from the Sea of Data, is super curious about everything around her. On the journey of pursuing dreams, she will accompany you to experience all sorts of adventures and meet a bunch of interesting folks. By the way, if she swings by late at night, make sure to treat her to some barbecue.</div>
             <div class="tags"><button style="margin-right:10px;">#Anime</button><button style="margin-right:10px;">#Manwha</button></div>
-            <div class="img-div-post"><img src="./css/genshin3.jpg" class="img-post"></div>
+            <div class="img-div-post"><img src="./css/hi3rd.jpg" class="img-post"></div>
             <br>
-            <input type="button" onclick="location.href='post_page.html'" value="See More">
+            <input type="button" onclick="location.href='post_page_3.html'" value="See More">
         </div>
+
+
+
         <div class="cards">
             <div style="display: flex; justify-content: space-between;">
-                <span class="title-post"><strong>Title1</strong></span>
+                <span class="title-post"><strong>Honkai Star rail 2.2 Update!</strong></span>
                 <input type="button" value="Delete">
             </div>
-            <span class="user-post">Ameriea</span>
-            <div class="description-post">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ut iste obcaecati ullam illum earum at maiores ducimus quia repellendus, sed vero? Consequatur dignissimos sit nemo explicabo fugiat repellendus adipisci!</div>
+            <span class="user-post">LilGuiGui</span>
+            <div class="description-post">The reflection of Penacony cast upon the deep. The "Nightmare" professed by The Family. However, what people don't know is that this primordial Memory Zone is the true form of the Dreamscape.
+
+            </div>
             <div class="tags"><button style="margin-right:10px;">#Anime</button><button style="margin-right:10px;">#Manwha</button></div>
-            <div class="img-div-post"><img src="./css/genshin3.jpg" class="img-post"></div>
+            <div class="img-div-post"><img src="./css/starrail1.jpg" class="img-post"></div>
             <br>
-            <input type="button" onclick="location.href='post_page.html'" value="See More">
+            <input type="button" onclick="location.href='post_page_4.html'" value="See More">
+        </div>
+
+
+
+        <div class="cards">
+            <div style="display: flex; justify-content: space-between;">
+                <span class="title-post"><strong>Zenless Zone Zero due to release in July 4th</strong></span>
+                <input type="button" value="Delete">
+            </div>
+            <span class="user-post">Tuonto</span>
+            <div class="description-post">Zenless Zone Zero is an upcoming free-to-play urban fantasy action role-playing game developed and published by miHoYo in mainland China, with global publishing by Cognosphere, d/b/a HoYoverse. It is scheduled for release on Microsoft Windows, iOS, Android and PlayStation 5, on July 4, 2024!</div>
+            <div class="tags"><button style="margin-right:10px;">#Anime</button><button style="margin-right:10px;">#Manwha</button></div>
+            <div class="img-div-post"><img src="./css/zzz1.jpg" class="img-post"></div>
+            <br>
+            <input type="button" onclick="location.href='post_page_5.html'" value="See More">
         </div>
     </div>
 
