Added dummy data
gemshin

--- a/phase1/main_page.html
+++ b/phase1/main_page.html
@@ -39,14 +39,16 @@
 
         <div class="cards">
             <div style="display: flex; justify-content: space-between;">
-                <span class="title-post"><strong>Title1</strong></span>
+                <span class="title-post"><strong>Genshin Impact 4.7 Update Information!</strong></span>
                 <input type="button" value="Delete">
             </div>
-            <span class="user-post">Ameriea</span>
-            <div class="date-post"><strong>04/21</strong></div>
-            <div class="description-post">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ut iste obcaecati ullam illum earum at maiores ducimus quia repellendus, sed vero? Consequatur dignissimos sit nemo explicabo fugiat repellendus adipisci!</div>
-            <div class="tags"><button style="margin-right:10px;">#Anime</button><button style="margin-right:10px;">#Manwha</button></div>
-            <div class="img-div-post"><img src="./css/genshin1.jpg" class="img-post"></div>
+            <span class="user-post">Tuonto</span>
+            <div class="date-post"><strong>04/02</strong></div>
+            <div class="description-post">〓Compensation Details〓<br><br>
+                Maintenance Compensation: Primogems ×300 (60 Primogems per hour the servers are down)<br>
+                Issue Fix Compensation: Primogems ×300 (please refer to the relevant compensation mail for more details)<br><br></div>
+            <div class="tags"><button style="margin-right:10px;">#Genshin_Impact</button><button style="margin-right:10px;">#4.7</button></div>
+            <div class="img-div-post"><img src="https://preview.redd.it/genshin-impact-version-4-7-preview-v0-stgcokjwyh2d1.jpeg?width=1080&crop=smart&auto=webp&s=0f20698460bf2da8aca1420bb2e6d62a9785c0a5" class="img-post"></div>
             <br>
             <input type="button" onclick="location.href='post_page_1.html'" value="See More">
         </div>
@@ -55,13 +57,13 @@
 
         <div class="cards">
             <div style="display: flex; justify-content: space-between;">
-                <span class="title-post"><strong>Title1</strong></span>
+                <span class="title-post"><strong>HoYoPlay is now out!</strong></span>
                 <input type="button" value="Delete">
             </div>
-            <span class="user-post">Ameriea</span>
-            <div class="description-post">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ut iste obcaecati ullam illum earum at maiores ducimus quia repellendus, sed vero? Consequatur dignissimos sit nemo explicabo fugiat repellendus adipisci!</div>
-            <div class="tags"><button style="margin-right:10px;">#Anime</button><button style="margin-right:10px;">#Manwha</button></div>
-            <div class="img-div-post"><img src="./css/genshin2.jpg" class="img-post"></div>
+            <span class="user-post">miHoYo</span>
+            <div class="description-post">A centralized platform for your favorite miHoYo games!</div>
+            <div class="tags"><button style="margin-right:10px;">#Anime</button></div>
+            <div class="img-div-post"><img src="https://preview.redd.it/fb23w8kkihpc1.png?width=1594&format=png&auto=webp&s=7c35b9afa11ad76c8e18692a9d3aa00a81febb0e" class="img-post"></div>
             <br>
             <input type="button" onclick="location.href='post_page_2.html'" value="See More">
         </div>
